--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@payos/node": "^1.0.10",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cloudinary": "^2.5.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cord": "^1.0.1",
